Add index.html with basic layout

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,20 @@
-body {
-  background-color: blue;
+
+
+.flex {
+  display: flex;
+  justify-content: space-around;
+ 
 }
+h3 {
+  display: inline-block;
+}
+
+ul {
+  border: 1px solid black;
+}
+
+form {
+  flex-direction: column;
+}
+
+
