--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,4 +1,23 @@
-body {
-  background-color: blue;
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+h3 {
+  display: inline-block;
+}
+
+ul {
+  border: 1px solid black;
+}
+
+form {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=style.css.map */
