--- a/src/scss/reset.css
+++ b/src/scss/reset.css
@@ -48,27 +48,4 @@ input {
   -webkit-appearance: none;
   border-radius: 0;
 }
-
-.flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-h3 {
-  display: inline-block;
-}
-
-ul {
-  border: 1px solid black;
-}
-
-form {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=reset.css.map */
